# AMORPH

./: .gitignore  .gitmodules  README.md  setup.cfg
doc/: Makefile  body text.docx  figures.py  ms.tex  references.bib
doc/figures/: Comparison-Fig Y.tif  Outputs-Fig Z.tif  README.md  instruments-FigX.tif  pgm.eps  pgm.py  sample.txt  volcanic glasses_FigA.tif
src/: 0%glass_rhyolite_Emperyon.txt  50% glass .02step3secdwell.txt  90%_glass_basalt_Emperyon.txt  AMORPH_acf  ConditionalPriorSinewaves.cpp  ConditionalPriorSinewaves.h  Config.cpp  Config.h  Data.cpp  Data.h  Lookup.cpp  Lookup.h  Makefile  MyConditionalPrior.cpp  MyConditionalPrior.h  MyModel.cpp  MyModel.h  OPTIONS  OPTIONS_AGGRESSIVE  README.md  config.yaml  control_points.in  display.py  dnest_functions.py  easy_data.txt  main.cpp  showresults.py
src/batch-amorph/: OPTIONS  README.md  batch.py  config.yaml
src/example-files/: easy_data.txt
src/pyamorph/: __init__.py  __main__.py  amorphpostprocess.py  amorphpostprocess.spec  display.py  dnest_functions.py  showresults.py
src/pyamorph_ccoverstreet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
