[metadata]
name = pyamorph-ccoverstreet
version = 0.1.1
author = Cale Overstreet
author_email = cale.overstreet@gmail.com
description = The Python post processing component of the AMORPH software developed by Brendon J. Brewer and Michael Rowe.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ccoverstreet/AMORPH
project_urls =
    Bug Tracker = https://github.com/ccoverstreet/AMORPH/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
install_requires = 
    dnest4
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
